bug TDI-22252 :"Talend News" can not stay in its original place when the some intems in latest item has a long name
git-svn-id: http://talendforge.org/svn/tos/trunk@88752 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.rcp.branding.tos.bigdata/content/root.xhtml
+++ b/org.talend.rcp.branding.tos.bigdata/content/root.xhtml
@@ -53,11 +53,11 @@ li{ list-style-type:none; padding-left:6px;}
 div#header {height: 150px; margin-left: auto; margin-right: auto; }
 .bodyclass{vertical-align:middle; background:#AAAAAA;}
 .main{width:880px;  border:#000000 1px solid; margin:auto; background:#FFFFFF; margin-top:50px; margin-bottom:50px;	}
-.left{width:400px; float:left;padding-left:20px; vertical-align:top; }
-.left_1{width:200px; float:left;padding-left:15px; vertical-align:top; }
-.right{width:400px; padding-left:20px;}
+.left{width:400px; float:left;padding-left:20px; vertical-align:top;word-break:break-all }
+.left_1{width:260px; float:left;padding-left:15px; vertical-align:top;word-break:break-all }
+.right{width:400px; padding-left:20px;word-break:break-all}
 .right a{color:#0000ff;}
-.right_1{width:330px; padding-left:20px;}
+.right_1{width:300px; padding-left:20px;word-break:break-all}
 .right_1 a{color:#0000ff;}
 .bottom {width:880px; height:24px; text-align:right; margin-top: 20px; margin-bottom:5px; color:#000000;}
 .separator {border-left: 2px solid #c9282d;padding-left:5px;margin-left:15px;}
