bug TDI-23419 fixed : Update the links to the Documentation Guides on the Welcome page
git-svn-id: http://talendforge.org/svn/tos/trunk@93674 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.rcp.branding.tos.bigdata/content/root.xhtml
+++ b/org.talend.rcp.branding.tos.bigdata/content/root.xhtml
@@ -99,9 +99,7 @@ div#header {height: 150px; margin-left: auto; margin-right: auto; }
 			   <blockquote>
 			   		
 			   </blockquote>
-			   <p class="style_1 style_2 style_3" style="padding-top:10px;">Documentation</p>
-			   <blockquote><p><a href="http://www.talend.com/resources/documentation.php#TOS_UG" target ="showUserGuide">User Guide</a><BR/>
-			   <a href="http://www.talend.com/resources/documentation.php#TOS_RG" target ="showReferenceGuide">Reference Guide</a></p></blockquote>
+			   <contentProvider id="DOCUMENTATIONTITLE" class="org.talend.rcp.intro.contentProvider.WelcomePageDynamicContentProvider" pluginId="org.talend.rcp"></contentProvider>
 			   <p class="style_1 style_2 style_3" style="padding-top:10px;">Getting Started</p>
 			   <blockquote><p><a href="http://www.talendforge.org/tutorials" target ="showTutorials">Tutorials</a>:self-train at a glance<BR/>
 			   <a href="http://www.talendforge.org/forum" target ="showForums">Forums</a>:share with Talend community!<BR/> 
