bug TDI-26514:WELCOME page seems to duplicate Documentation links
git-svn-id: http://talendforge.org/svn/tos/trunk@106656 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.rcp.branding.tos.bigdata/content/root.xhtml
+++ b/org.talend.rcp.branding.tos.bigdata/content/root.xhtml
@@ -99,7 +99,7 @@ div#header {height: 150px; margin-left: auto; margin-right: auto; }
                <blockquote>
                     
                </blockquote>
-               <contentProvider id="DOCUMENTATIONTITLE" class="org.talend.rcp.intro.contentProvider.WelcomePageDynamicContentProvider" pluginId="org.talend.rcp"></contentProvider> <contentProvider id="DOCUMENTATIONTITLE" class="org.talend.rcp.intro.contentProvider.WelcomePageDynamicContentProvider" pluginId="org.talend.rcp"></contentProvider> <contentProvider id="GETTINGSTARTEDTITLE" class="org.talend.rcp.intro.contentProvider.WelcomePageDynamicContentProvider" pluginId="org.talend.rcp"></contentProvider>
+               <contentProvider id="DOCUMENTATIONTITLE" class="org.talend.rcp.intro.contentProvider.WelcomePageDynamicContentProvider" pluginId="org.talend.rcp"></contentProvider><contentProvider id="GETTINGSTARTEDTITLE" class="org.talend.rcp.intro.contentProvider.WelcomePageDynamicContentProvider" pluginId="org.talend.rcp"></contentProvider>
                <p align="center"><a href="http://org.eclipse.ui.intro/close"><img src="imgs/startNow.jpg" width="120px" height="25px" /></a></p> 
               </div>
             </td>
