TUP-2712 new feature:Replace the icons of the repository https://jira.talendforge.org/browse/TUP-2712

--- a/main/plugins/org.talend.rcp.branding.tos.bigdata/content/root.xhtml
+++ b/main/plugins/org.talend.rcp.branding.tos.bigdata/content/root.xhtml
@@ -81,7 +81,7 @@ div#header {height: 150px; margin-left: auto; margin-right: auto; }
             <td>
             <div id="div_left_part" >
               <span class="style_1 style_2 style_3">Latest items</span><br />
-              <img style="padding-top:10px;margin-left:15px;" src="imgs/img_process.jpg" /> <span class="style_3">&nbsp;&nbsp;Job</span><br />
+              <img style="padding-top:10px;margin-left:15px;" src="imgs/img_process.png" /> <span class="style_3">&nbsp;&nbsp;Job</span><br />
                <!-- latest modified process -->
                <blockquote style="margin-left:30px;">
                   <contentProvider id="PROCESS" class="org.talend.rcp.intro.contentProvider.DynamicContentProvider" pluginId="org.talend.rcp"> 
